--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -15,16 +15,19 @@ jobs:
     steps:
     - uses: 'actions/checkout@v4'
 
-    # - uses: 'google-github-actions/auth@v2'
-    #   with:
-    #     project_id: 'utahiro-calendar'
-    #     service_account: github-actions@utahiro-calendar.iam.gserviceaccount.com
-    #     token_format: access_token
-    #     workload_identity_provider: 'projects/306157530435/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider'
-    #     access_token_scopes: https://www.googleapis.com/auth/calendar.events.owned
-  
-    - run: echo "$USER_TOKEN" > token.json
-      env:
-        USER_TOKEN: ${{ secrets.USER_TOKEN }}
-    - run: pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
-    - run: python3 test.py
+    - uses: 'google-github-actions/auth@v2'
+      with:
+        project_id: 'utahiro-calendar'
+        service_account: google-calendar-api@utahiro-calendar.iam.gserviceaccount.com
+        workload_identity_provider: 'projects/306157530435/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider'
+    
+    - run: >
+        curl 'https://www.googleapis.com/calendar/v3/calendars/11156d75f2d2f07e20adc131ffc8dd5d467edda9114a6c28f357b03e16578ca2%40group.calendar.google.com/events'
+        --header 'Authorization: Bearer ${{ steps.auth.outputs.auth_token }}'
+        --header 'Accept: application/json'
+
+    # - run: echo "$USER_TOKEN" > token.json
+    #   env:
+    #     USER_TOKEN: ${{ secrets.USER_TOKEN }}
+    # - run: pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
+    # - run: python3 test.py
