--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -15,7 +15,8 @@ jobs:
     steps:
     - uses: 'actions/checkout@v4'
 
-    - uses: 'google-github-actions/auth@v2'
+    - id: auth
+      uses: 'google-github-actions/auth@v2'
       with:
         project_id: 'utahiro-calendar'
         service_account: google-calendar-api@utahiro-calendar.iam.gserviceaccount.com
