--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -22,9 +22,13 @@ jobs:
         service_account: google-calendar-api@utahiro-calendar.iam.gserviceaccount.com
         workload_identity_provider: 'projects/306157530435/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider'
         token_format: 'access_token'
-    
+
     - run: |-
-        curl -H 'Bearer: ${{ steps.auth.outputs.access_token }}' https://www.googleapis.com/calendar/v3/calendars/11156d75f2d2f07e20adc131ffc8dd5d467edda9114a6c28f357b03e16578ca2%40group.calendar.google.com/events
+        curl -H "Authorization: Bearer ${{ steps.auth.outputs.access_token }}"
+        "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token=${{ steps.auth.outputs.access_token }}"
+
+    # - run: |-
+    #     curl -H 'Bearer: ${{ steps.auth.outputs.access_token }}' https://www.googleapis.com/calendar/v3/calendars/11156d75f2d2f07e20adc131ffc8dd5d467edda9114a6c28f357b03e16578ca2%40group.calendar.google.com/events
 
     # - run: echo "$USER_TOKEN" > token.json
     #   env:
